# IFT-3355-TP2

./: CMakeLists.txt  README
data/scene/: all_at_once.ray  bvh.ray  pcylinder.ray  pmesh.ray  pquad.ray  psphere.ray  reflection.ray  refraction.ray  softshadows.ray  tcage.ray  twindows.ray
src/: aabb.cpp  aabb.h  basic.h  container.cpp  container.h  frame.h  main.cpp  object.cpp  object.h  parser.cpp  parser.h  raytracer.cpp  raytracer.h  resource_manager.cpp  resource_manager.h  scene.h
